Add cluster name to Upstart instance jobs.

--- a/ceph/files/default/upstart-ceph-mon.conf
+++ b/ceph/files/default/upstart-ceph-mon.conf
@@ -10,6 +10,6 @@ pre-start script
     test -d "/srv/mon.$id" || { stop; exit 0; }
 end script
 
-instance $id
+instance ${cluster:-ceph}/$id
 
 exec /usr/bin/ceph-mon -i "$id" -f
