--- a/ceph/files/default/upstart-ceph-osd.conf
+++ b/ceph/files/default/upstart-ceph-osd.conf
@@ -10,6 +10,6 @@ pre-start script
     test -d "/srv/osd.$id" || { stop; exit 0; }
 end script
 
-instance $id
+instance ${cluster:-ceph}/$id
 
 exec /usr/bin/ceph-osd -i "$id" -f
