Pass --cluster= to ceph-mon, ceph-osd in upstart scripts.

--- a/ceph/files/default/upstart-ceph-mon.conf
+++ b/ceph/files/default/upstart-ceph-mon.conf
@@ -12,4 +12,4 @@ end script
 
 instance ${cluster:-ceph}/$id
 
-exec /usr/bin/ceph-mon -i "$id" -f
+exec /usr/bin/ceph-mon --cluster="${cluster:-ceph}" -i "$id" -f
