--- a/ceph/files/default/upstart-ceph-osd.conf
+++ b/ceph/files/default/upstart-ceph-osd.conf
@@ -12,4 +12,4 @@ end script
 
 instance ${cluster:-ceph}/$id
 
-exec /usr/bin/ceph-osd -i "$id" -f
+exec /usr/bin/ceph-osd --cluster="${cluster:-ceph}" -i "$id" -f
