--- a/ceph/files/default/upstart-ceph-mon.conf
+++ b/ceph/files/default/upstart-ceph-mon.conf
@@ -7,7 +7,7 @@ respawn limit 5 30
 
 pre-start script
     test -x /usr/bin/ceph-mon || { stop; exit 0; }
-    test -d "/srv/mon.$id" || { stop; exit 0; }
+    test -d "/var/lib/ceph/mon/${cluster:-ceph}-$id" || { stop; exit 0; }
 end script
 
 instance ${cluster:-ceph}/$id
