--- a/ceph/files/default/upstart-ceph-osd-all.conf
+++ b/ceph/files/default/upstart-ceph-osd-all.conf
@@ -5,18 +5,20 @@ start on filesystem
 task
 
 script
-  find /srv/ -mindepth 1 -maxdepth 1 -regextype posix-egrep -regex '.*/osd\.[0-9]+' -printf '%P\n' \
+  # TODO what's the valid charset for cluster names and osd ids?
+  find /var/lib/ceph/osd/ -mindepth 1 -maxdepth 1 -regextype posix-egrep -regex '.*/[a-z0-9]+-[a-z0-9]+' -printf '%P\n' \
   | while read f; do
-    if [ -e "/srv/$f/done" ]; then
-        id="${f##osd.}"
+    if [ -e "/var/lib/ceph/osd/$f/done" ]; then
+        cluster="${f%%-*}"
+        id="${f#*-}"
 
 	# upstart start(8) fails if the job is already running
 	# https://bugs.launchpad.net/upstart/+bug/878322
 
 	# also cannot ask for status of instance that isn't running at
 	# that time, so just list all and filter that
-	if initctl list|mawk '$1=="ceph-osd" && $2=="(" INSTANCE ")" && $3~/start\// { exit 1 }' INSTANCE="$id"; then
-	  start ceph-osd id="$id"
+	if initctl list|mawk '$1=="ceph-osd" && $2=="(" CLUSTER "/" INSTANCE ")" && $3~/start\// { exit 1 }' CLUSTER="$cluster" INSTANCE="$id"; then
+	  start ceph-osd cluster="$cluster" id="$id"
 	fi
     fi
   done
