--- a/ceph/files/default/upstart-ceph-osd.conf
+++ b/ceph/files/default/upstart-ceph-osd.conf
@@ -7,7 +7,7 @@ respawn limit 5 30
 
 pre-start script
     test -x /usr/bin/ceph-osd || { stop; exit 0; }
-    test -d "/srv/osd.$id" || { stop; exit 0; }
+    test -d "/var/lib/ceph/osd/${cluster:-ceph}-$id" || { stop; exit 0; }
 end script
 
 instance ${cluster:-ceph}/$id
