--- a/ceph/files/default/upstart-ceph-osd.conf
+++ b/ceph/files/default/upstart-ceph-osd.conf
@@ -8,6 +8,22 @@ respawn limit 5 30
 pre-start script
     test -x /usr/bin/ceph-osd || { stop; exit 0; }
     test -d "/var/lib/ceph/osd/${cluster:-ceph}-$id" || { stop; exit 0; }
+
+    # update location in crush
+    # TODO: use a replace, not a remove & add; see branch wip-crush-update
+    # TODO: un-hardcode the domain=root assumption
+    # TODO: make the osd key able to do this
+    # TODO: above is hard because /usr/bin/ceph forces type=='client'
+    crush () {
+        ceph \
+	  --cluster="${cluster:-ceph}" \
+	  --keyring /etc/ceph/"${cluster:-ceph}.client.admin.keyring" \
+	  osd \
+	  crush \
+	  "$@"
+    }
+    crush remove "$id" 2>/dev/null || :
+    crush add "$id" "osd.$id" 1 domain=root || :
 end script
 
 instance ${cluster:-ceph}/$id
