--- a/ceph/files/default/upstart-ceph-mon.conf
+++ b/ceph/files/default/upstart-ceph-mon.conf
@@ -8,6 +8,8 @@ respawn limit 5 30
 pre-start script
     test -x /usr/bin/ceph-mon || { stop; exit 0; }
     test -d "/var/lib/ceph/mon/${cluster:-ceph}-$id" || { stop; exit 0; }
+
+    install -d -m0755 /var/run/ceph
 end script
 
 instance ${cluster:-ceph}/$id
