--- a/ceph/files/default/upstart-ceph-osd.conf
+++ b/ceph/files/default/upstart-ceph-osd.conf
@@ -9,6 +9,8 @@ pre-start script
     test -x /usr/bin/ceph-osd || { stop; exit 0; }
     test -d "/var/lib/ceph/osd/${cluster:-ceph}-$id" || { stop; exit 0; }
 
+    install -d -m0755 /var/run/ceph
+
     # update location in crush
     # TODO: use a replace, not a remove & add; see branch wip-crush-update
     # TODO: un-hardcode the domain=root assumption
