--- a/ceph/files/default/upstart-ceph-osd-all.conf
+++ b/ceph/files/default/upstart-ceph-osd-all.conf
@@ -4,6 +4,12 @@ start on filesystem
 
 task
 
+# This job is not really needed if you use the hotplug style of
+# activating disks, but it is provided in case you want to manage your
+# disks more manually, by adding entries in /etc/fstab. Any entry in
+# /var/lib/ceph/osd/$cluster-$id will have an osd started for it. You
+# can also use symlinks.
+
 script
   # TODO what's the valid charset for cluster names and osd ids?
   find /var/lib/ceph/osd/ -mindepth 1 -maxdepth 1 -regextype posix-egrep -regex '.*/[a-z0-9]+-[a-z0-9]+' -printf '%P\n' \
