The osd key is able to update its own crushmap. Use set not remove+add.
This depends on ceph.git commit e0a636f90701620670e747571cc7ad27efac958f.

--- a/ceph/files/default/upstart-ceph-osd.conf
+++ b/ceph/files/default/upstart-ceph-osd.conf
@@ -12,20 +12,14 @@ pre-start script
     install -d -m0755 /var/run/ceph
 
     # update location in crush
-    # TODO: use a replace, not a remove & add; see branch wip-crush-update
     # TODO: un-hardcode the domain=root assumption
-    # TODO: make the osd key able to do this
-    # TODO: above is hard because /usr/bin/ceph forces type=='client'
-    crush () {
-        ceph \
-	  --cluster="${cluster:-ceph}" \
-	  --keyring /etc/ceph/"${cluster:-ceph}.client.admin.keyring" \
-	  osd \
-	  crush \
-	  "$@"
-    }
-    crush remove "$id" 2>/dev/null || :
-    crush add "$id" "osd.$id" 1 domain=root || :
+    ceph \
+      --cluster="${cluster:-ceph}" \
+      --name="osd.$id" \
+      --keyring="/var/lib/ceph/osd/"${cluster:-ceph}-$id/keyring" \
+      osd crush set \
+      "$id" "osd.$id" 1 domain=root \
+      || :
 end script
 
 instance ${cluster:-ceph}/$id
