--- a/ceph/files/default/upstart-ceph-osd.conf
+++ b/ceph/files/default/upstart-ceph-osd.conf
@@ -6,6 +6,7 @@ respawn
 respawn limit 5 30
 
 pre-start script
+    set -e
     test -x /usr/bin/ceph-osd || { stop; exit 0; }
     test -d "/var/lib/ceph/osd/${cluster:-ceph}-$id" || { stop; exit 0; }
 
@@ -16,7 +17,7 @@ pre-start script
     ceph \
       --cluster="${cluster:-ceph}" \
       --name="osd.$id" \
-      --keyring="/var/lib/ceph/osd/"${cluster:-ceph}-$id/keyring" \
+      --keyring="/var/lib/ceph/osd/${cluster:-ceph}-$id/keyring" \
       osd crush set \
       "$id" "osd.$id" 1 domain=root \
       || :
