set -e in upstart scripts.

--- a/ceph/files/default/upstart-ceph-mon-all.conf
+++ b/ceph/files/default/upstart-ceph-mon-all.conf
@@ -5,6 +5,7 @@ start on filesystem
 task
 
 script
+  set -e
   # TODO what's the valid charset for cluster names and mon ids?
   find /var/lib/ceph/mon/ -mindepth 1 -maxdepth 1 -regextype posix-egrep -regex '.*/[a-z0-9]+-[a-z0-9]+' -printf '%P\n' \
   | while read f; do
