--- a/ceph/files/default/upstart-ceph-osd-all.conf
+++ b/ceph/files/default/upstart-ceph-osd-all.conf
@@ -11,6 +11,7 @@ task
 # can also use symlinks.
 
 script
+  set -e
   # TODO what's the valid charset for cluster names and osd ids?
   find /var/lib/ceph/osd/ -mindepth 1 -maxdepth 1 -regextype posix-egrep -regex '.*/[a-z0-9]+-[a-z0-9]+' -printf '%P\n' \
   | while read f; do
