--- a/ceph/files/default/upstart-ceph-mon.conf
+++ b/ceph/files/default/upstart-ceph-mon.conf
@@ -6,6 +6,7 @@ respawn
 respawn limit 5 30
 
 pre-start script
+    set -e
     test -x /usr/bin/ceph-mon || { stop; exit 0; }
     test -d "/var/lib/ceph/mon/${cluster:-ceph}-$id" || { stop; exit 0; }
 
