--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,6 @@
-language: ruby
-gemfile:
-   - test/support/Gemfile
 rvm:
   - 1.9.2
   - 1.9.3
+  - 2.0.0
 script:
-  - bundle exec rake knife
-  - bundle exec rake foodcritic
+  - bundle exec strainer test
