add test-kitchen + kitchen-vagrant to Gemfile
and make travis ignore these.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,6 @@ rvm:
   - 2.0.0
 before_script:
     - bundle exec berks install
+bundler_args: --without integration
 script:
   - bundle exec strainer test
