--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -11,6 +11,9 @@ platforms:
 - name: ubuntu-14.04
   run_list:
     - recipe[apt]
+- name: debian-7.4
+  run_list:
+    - recipe[apt]
 - name: centos-6.5
 - name: centos-5.10
 - name: fedora-18
