--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -11,6 +11,9 @@ platforms:
 - name: ubuntu-14.04
   run_list:
     - recipe[apt]
+  attributes:
+    apache:
+      mpm: event        # ugly workaround for onehealth-cookbooks/apache2 #236
 - name: debian-7.4
   run_list:
     - recipe[apt]
