--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: ruby
 sudo: false
 cache: bundler
+bundler_args: --without kitchen_common kitchen_vagrant
 rvm:
   - 1.9.3
   - 2.0.0
-bundler_args: --without integration
 script:
   - bundle exec rake travis
