--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -26,3 +26,7 @@ TrailingComma:
   Enabled: false
 WordArray:
   Enabled: false
+Metrics/AbcSize:
+  Enabled: false
+Metrics/PerceivedComplexity:
+  Enabled: false
